Version 0.2-0:

  - this will be the first public release of the wordspace package

Version 0.1-22:

  - clean up & complete documentation in preparation for first public release
  - reduce size of example data (verb-noun triples, pre-compiled DSM vectors)

Version 0.1-21:

  - replace readr::read_delim() with iotools::read.delim.raw(), which is slightly faster and leaner; also avoids expensive dependencies of readr such as BH (Boost libraries)
  - implemented work-arounds to support compressed files and different character encodings with iotools
  - package test for file input (triplet and UCS format, different encodings) with suitable sample files in extdata/

Version 0.1-20:

  - new sample data: DSM objects for small illustrative term-term and term-context matrix

Version 0.1-19:

  - complete basic documentation for all functions and data sets
  - data set DSM_VerbNounTriples_DESC removed to reduce package size
  - dsm.projection() now supports power-scaling for SVD-based projection methods

Version 0.1-18:

  - efficient truncated SVD of sparse matrix using SVDLIBC code from 'sparsesvd' package
  - faster reading of triplet files with 'readr' package (though not very memory-efficient)

Version 0.1-17:

  - Minkowski distance and length measures generalized to 0 <= p < 1 (but not homogeneous for p < 1, hence not a proper mathematical norm)

Version 0.1-16:

  - plot() method for dist.matrix for easy visualization of neighbourhood graphs
  - head() methods to extract top left corner of DSM object (dsm) or distance matrix (dist.matrix)
  - print() method for DSM objects, so users don't accidentally print a large co-occurrence matrix
  - new sample data set: DSM_Vectors with 100-dimensional pre-compiled representations for selected words
  - new sample data: typical singular values from term-context matrix
  - new sample data: "goods" example illustrating dimensionality reduction based on correlations

Version 0.1-14:
