@@ -1,6 +1,7 @@
 Version 0.2-0:
 
-  - this will be the first public release of the wordspace package
+  - the first public release of the wordspace package
+  - completed vignette with tutorial introduction
 
 Version 0.1-22:
 
